Initial trial of Grid system
trying out a simple grid system using flex.

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>YOU FILL THIS IN</title>
   <meta name="description" content="">
   <meta name="author" content="">
+
+  <!-- Font Awesome 
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <!-- Mobile Specific Metas
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
