adding more html for type
complete list now

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500;1,600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/break-room.css">
 <head>
 
@@ -24,21 +24,32 @@
 
 <p>All type is Open Sans (a Google font) set in rems for responsive sizing and inclusive and accessible scaling. </p>
 <hr>
+<h3>Font styles</h3>
+Light 300
+Light 300 Italic
+Regular 400
+Medium 500
+Medium 500 Italic
+Semibold 600
+Bold 700
+<hr>
 <h3>Standard Headings</h3>
-<p>The family of headings creates the hierarchy to help users, search engines, and screen readers parse and understand the site content. Headings have  specific letter-spacing, line-height, and margins.</p>
+<p>The family of headings creates the hierarchy to help users, search engines, and screen readers parse and understand the site content. <!--Headings have specific letter-spacing, line-height, and margins.--></p>
 
 <h1>h1 Heading</h1>
 <h2>h2 Heading</h2>
 <h3>h3 Heading</h3>
 <h4>h4 Heading</h4>
-<h5>h5Heading</h5>
+<h5>h5 Heading</h5>
 <h6>h6 Heading</h6>
 <hr>
-<h3>Base Paragraph</h3>
-<p>The default body text set to 1 rem with a line height of 1.5. Since most browsers use a font size value of 16px, that will be equal to a font size of 1 rem with s line height of 24px.</p>
 
+<h3>Base Paragraph</h3>
+<p>The default body text font size is set to 1rem with a line height of 1.5, equivalent in most browsers to font size value of 16px with a line height of 24px.</p><br>
+<h4>Paragraph Example</h4>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint dolorum eveniet ad reiciendis laboriosam. Atque voluptate blanditiis excepturi eveniet hic sint consequatur doloremque. Reprehenderit nulla sed dolore impedit architecto fuga. Exercitationem architecto culpa nihil ipsam non ratione officiis assumenda dolores delectus itaque? Commodi odit cum fugit tenetur, reprehenderit quisquam sed. Quisquam officiis vel vitae doloremque mollitia nemo corporis explicabo quos? Voluptas, alias vitae quia, similique pariatur porro eius officia nam sed id et facere! Magni ducimus ex sunt labore. Accusantium perspiciatis vero commodi iure rem, deserunt illum nam perferendis tempora.</p>
 <hr>
+
 <h3>Text Elements</h3>
 <p> Commonly used text elements include bold, strong, italic, emphasized, marked, small, deleted and inserted text.</p>
 <ul>
@@ -65,6 +76,7 @@
 <p><strong>This line rendered as bold text.</strong></p>
 <p><em>This line rendered as italicized text.</em></p>
 <hr>
+
 <h3>Additional Text Elements</h3>
 <ul>
   <li><abbr>Abbr: </abbr>defines an abbreviation or an acronym, like "HTML" or "CSS"</li><address>Address</address>defines the contact information(email, phone, social media, etc.) for the author/owner of a document or an article, usually browsers render in italic, always with a line break before and after</li>
@@ -87,11 +99,11 @@
   </li>
 </ul>
 <hr>
+
 <h3>Text Transformations</h3>
 <p class="uppercase" style="text-transform: uppercase;">This text is transformed to uppercase.</p>
 <p class="lowercase" style="text-transform: lowercase;">This text is transformed to lowercase.</p>
 <p class="capitalize" style="text-transform: capitalize;">This text is capitalized.</p>
-
 
 <hr>
 <h3>Text Alignment</h3>
