--- a/index.html
+++ b/index.html
@@ -31,6 +31,158 @@
  
 </head>
 <body>
+  
+      <!-- Typography
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+      <section id="typography">
+  <h2>Typography</h2>
+  <p>All type is Open Sans (a Google font) set in rems for responsive sizing and inclusive and accessible scaling. </p>
+  <hr>
+  <h3>Font styles</h3>
+  <p class="fontStyle300">Light 300</p>
+  <p class="fontStyle300i">Light 300 Italic</p>
+  <p class="fontStyle400">Regular 400</p>
+  <p class="fontStyle400i">Regular 400 Italic</p>
+  <p class="fontStyle500">Medium 500</p>
+  <p class="fontStyle500i">Medium 500 Italic</p>
+  <p class="fontStyle600">Semibold 600</p>
+  <p class="fontStyle700">Bold 700</p>
+  <p class="fontStyle800">Extra Bold 800</p>
+  
+  <hr>
+  <h3>Standard Headings</h3>
+  <p>The family of headings creates the hierarchy to help users, search engines, and screen readers parse and understand the site content. <!--Headings have specific letter-spacing, line-height, and margins.--></p>
+
+  <h1>h1 Heading</h1>
+  <h2>h2 Heading</h2>
+  <h3>h3 Heading</h3>
+  <h4>h4 Heading</h4>
+  <h5>h5 Heading</h5>
+  <h6>h6 Heading</h6>
+  <hr>
+
+  <h3>Base Paragraph</h3>
+  <p>The default body text font size is set to 1rem with a line height of 1.5, equivalent in most browsers to font size value of 16px with a line height of 24px.</p><br>
+  <h4>Paragraph Example</h4>
+  <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint dolorum eveniet ad reiciendis laboriosam. Atque voluptate blanditiis excepturi eveniet hic sint consequatur doloremque. Reprehenderit nulla sed dolore impedit architecto fuga. Exercitationem architecto culpa nihil ipsam non ratione officiis assumenda dolores delectus itaque? Commodi odit cum fugit tenetur, reprehenderit quisquam sed. Quisquam officiis vel vitae doloremque mollitia nemo corporis explicabo quos? Voluptas, alias vitae quia, similique pariatur porro eius officia nam sed id et facere! Magni ducimus ex sunt labore. Accusantium perspiciatis vero commodi iure rem, deserunt illum nam perferendis tempora.</p>
+  <hr>
+
+  <h3>Text Elements</h3>
+  <p> Commonly used text elements include bold, strong, italic, emphasized, marked, small, deleted and inserted text.</p>
+  <ul>
+      <li><b>Bold text: </b>used for presentation purposes to draw attention</li>
+      <li><strong>Important text: </strong>similar to bold more commonly used than the bold tag</li>
+      <li><i>Italic text: </i>also for presentation purposes to indicate a mood or different quality</li>
+      <li><em>Emphasized text</em>specifies the stress emphasis of its contents</li>
+      <li><mark>Marked text: </mark>text which is marked or highlighted for reference or notation</li>
+      <li><small>Small Text: </small>smaller text like copyright and other side-comments but it is usually done with CSS instead.</li>
+      <li><del>Deleted text: </del>text that has been deleted from a document usually displayed with a line through deleted text</li>
+      <li><ins>Inserted text: </ins>defines a text that has been inserted into a document</li>
+      <li><cite>Cite: </cite>defines the title of a creative work</li>
+      <li><code>Code: </code> defines computer code displayed in the browser's default monospace font.</li>
+      <li><var>Var: </var> defines a variable in programming or in a mathematical expression usually displayed in italic</li>
+  </ul>
+  <hr>
+  <h3>Element Examples</h3>
+    <p>You can use the mark tag to <mark>highlight</mark> text.</p>
+    <p><del>This line of text is meant to be treated as deleted text.</del></p>
+    <p><s>This line of text is meant to be treated as no longer accurate.</s></p>
+    <p><ins>This line of text is meant to be treated as an addition to the document.</ins></p>
+    <p><u>This line of text will render as underlined.</u></p>
+    <p><small>This line of text is meant to be treated as fine print.</small></p>
+    <p><strong>This line rendered as bold text.</strong></p>
+    <p><em>This line rendered as italicized text.</em></p>
+  <hr>
+
+  <h3>Additional Text Elements</h3>
+  <ul>
+    <li><abbr>Abbr: </abbr>defines an abbreviation or an acronym, like "HTML" or "CSS"</li><address>Address</address>defines the contact information(email, phone, social media, etc.) for the author/owner of a document or an article, usually browsers render in italic, always with a line break before and after</li>
+    <li><blockquote>Blockquote: </blockquote>specifies a section that is quoted from another source which browser usually indent</li>
+    <li><li>Lists: </li>defines list item</li>
+    <li>
+      <ol>Ordered (numbered) list
+        <li>Item one</li>
+        <li>Item two</li>
+        <li>Item three</li>
+      </ol>
+    </li>
+    <li>
+      <br>
+      <ul>Unordered (bulleted) list
+        <li>Item one</li>
+        <li>Item two</li>
+        <li>Item three</li>
+      </ul>
+    </li>
+  </ul>
+  <hr>
+
+  <h3>Text Transformations</h3>
+    <p class="uppercase" style="text-transform: uppercase;">This text is transformed to uppercase.</p>
+    <p class="lowercase" style="text-transform: lowercase;">This text is transformed to lowercase.</p>
+    <p class="capitalize" style="text-transform: capitalize;">This text is capitalized.</p>
+
+  <hr>
+  <h3>Text Alignment</h3>
+    <p style="text-align: left;">Aligned Left: Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, impedit, fuga velit vitae, nemo quam rem commodi ea beatae vero cupiditate quod et distinctio inventore aliquid. Voluptates ipsa quaerat odit!</p><br>
+    <p style="text-align: center;">Aligned Center: Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, impedit, fuga velit vitae, nemo quam rem commodi ea beatae vero cupiditate quod et distinctio inventore aliquid. Voluptates ipsa quaerat odit!</p><br>
+    <p style="text-align: right;">Aligned Right: Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, impedit, fuga velit vitae, nemo quam rem commodi ea beatae vero cupiditate quod et distinctio inventore aliquid. Voluptates ipsa quaerat odit!</p>
+  <hr>
+      </section>
+  <!-- Grid System
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+    <section id="grid">
+      <h2>Our Grid System</h2>
+      <div class="exGrid">
+        <div class="row">
+          <div class="column-one"><h3>ONE</h3></div>
+          <div class="column-eleven"><h3>ELEVEN</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-two"><h3>TWO</h3></div>
+          <div class="column-ten"><h3>TEN</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-three"><h3>THREE</h3></div>
+          <div class="column-nine"><h3>NINE</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-four"><h3>FOUR</h3></div>
+          <div class="column-eight"><h3>EIGHT</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-five"><h3>FIVE</h3></div>
+          <div class="column-seven"><h3>SEVEN</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-six"><h3>SIX</h3></div>
+          <div class="column-six"><h3>SIX</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-seven"><h3>SEVEN</h3></div>
+          <div class="column-five"><h3>FIVE</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-eight"><h3>EIGHT</h3></div>
+          <div class="column-four"><h3>FOUR</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-nine"><h3>NINE</h3></div>
+          <div class="column-three"><h3>THREE</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-ten"><h3>TEN</h3></div>
+          <div class="column-two"><h3>TWO</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-eleven"><h3>ELEVEN</h3></div>
+          <div class="column-one"><h3>ONE</h3></div>
+        </div>
+        <div class="row">
+          <div class="column-twelve"><h3>TWELVE</h3></div>
+        </div>
+      </div>
+    </section>
 
 </body>
 </html>
