--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
-
   <!-- Basic Page Needs
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
@@ -23,15 +22,50 @@
   <!-- google font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,500;1,600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Open+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
  
   <!-- CSS
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/break-room.css">
+
+  <!-- custom style -->
  
 </head>
 <body>
-<!-- THIS IS A BOILERPLATE FOR OUR USERS -->
+  <!-- THIS IS A BOILERPLATE FOR OUR USERS -->
+  <header>
+    <nav class="navbar">
+      <div class="navbar-container">
+        <div class="navbar-logo">
+          <a href="" class="navbar-item">Icon</a>
+        </div>
+        <div class="navbar-menu-container">
+          <div class="navbar-menu">
+            <div class="navbar-close">
+              <i class="fa-sharp fa-solid fa-xmark close-icon"></i>
+            </div>
+            <a href="#" class="navbar-item active">Home</a>
+            <a href="#" class="navbar-item">About</a>
+            <a href="#" class="navbar-item">Work</a>
+            <a href="#" class="navbar-item">Contact</a>
+          </div>
+        </div>
+        <div class="navbar-toggle">
+          <i class="fa-solid fa-bars menu-toggle-icon"></i>
+        </div>
+      </div>
+    </nav>
+  </header>
+  <main class="room">
+    <section class="navbar-nav-m">
+      <h1 class="t-center">Your Website</h1>
+    </section>
+  </main>
+  <footer>
 
+  </footer>
+  <!-- JavaScript
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <script src="scripts/break-room.js"></script>
 </body>
 </html>
